[package]
name = "athena-led"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Remove panic unwinding to reduce binary size
strip = true        # Strip symbols from binary

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"] }
anyhow = "1.0.75"
sysfs_gpio = "0.6.1"
clap = { version = "4.4.4", features = ["derive"] }
once_cell = "1.18.0"
